finnaly got blob 2 to fit and fixed issues with line pn top of blob images. Also testing to make sure Joi icon arrows appear on mobile

--- a/assets/HeroPage.css
+++ b/assets/HeroPage.css
@@ -39,12 +39,16 @@
 
 .heroSecTextBox h1 {
     /* font-size: 48px; */
-    line-height: 1.2;
+    line-height: 1;
     margin: 0;
 }
 
 h1 p {
     margin: 0;
+}
+
+.heroSecTextBox p {
+    margin-bottom: 20px;
 }
 
 .heroSecImg {
